fix(codegen-services): review finding — resolved-type erasure check for reserved helper collisions
The reserved method-name collision predicate read the DECLARED element
parameter types while the emitter emits asMemberOf-RESOLVED types, so a
_payloadIndex_(T) inherited from Parent<ServiceMethodMeta> slipped both
the generic skip and the collision check and generated uncompilable
source. Predicate now compares the resolved ParamModel type's erasure.
Pinned by a pure-inheritance regression fixture (declared T/erasure
Object vs resolved ServiceMethodMeta — the only discriminating shape)
plus a re-declared dispatch sanity sibling. Last stale fixture comment
rewritten. 96 + 371 module tests green.